Update 0. HTML 개요.md

--- a/0. HTML 개요.md
+++ b/0. HTML 개요.md
@@ -53,8 +53,7 @@
 <br>
 <br>
 
-# 2. 실습환경 세팅
-## Web Editer & IDE
+## 2) 실습환경 세팅
 ### Web Editer(편집기)
 - HTML 문법에 맞춰 작성할 수 있도록 도와주는 편집기.
 - 문법에 따라 색깔, 들여쓰기 등을 구분할 수 있다.
