Update 1. HTML의 요소(1).md

--- a/1. HTML의 요소(1).md
+++ b/1. HTML의 요소(1).md
@@ -47,10 +47,10 @@
 <br>
 	
 ### MIME Type
-MIME 타입은 클라이언트에게 전송된 문서의 다양성을 알려주기 위한 메커니즘.
+MIME 타입은 클라이언트에게 전송된 문서의 다양성을 알려주기 위한 메커니즘이다.
 #### 일반적인 구조
 ```
-	type/subtype
+type/subtype
 ```
 #### 개별 타입
 - text : 문자로만 이루어진 파일
