Update 1. HTML의 요소(1).md

--- a/1. HTML의 요소(1).md
+++ b/1. HTML의 요소(1).md
@@ -34,8 +34,9 @@
 <meta charset="UTF-8">
 ```
 #### viewport(뷰 포트)
+전체 브라우저 중 웹페이지를 볼 수 있는 영역. 브라우저, 모바일 등 기기에 따라 정의해줌.
 ```
-<meta name="viewport"> // 전체 브라우저 중 웹페이지를 볼 수 있는 영역. 브라우저, 모바일 등 기기에 따라 정의해줌.
+<meta name="viewport">
 ```
 - width : 웹 사이트를 렌더링 하고자 하는 뷰포트 너비를 정의.
 - height : 뷰포트 높이를 정의.
