Update 0. HTML 개요.md

--- a/0. HTML 개요.md
+++ b/0. HTML 개요.md
@@ -87,3 +87,11 @@
 <br>
 
 > 개요, 실습환경 세팅
+
+<br>
+
+-----
+
+<br>
+
+> HTML, CSS는 거의 다 안다고 생각했지만 공부할 수록 새로운 것들을 발견하게 되는 것 같다. VSCode 단축키가 이렇게 유용하게 있는 줄 몰랐다. 강의 들을 때마다 강사님들은 편하게 행을 이동시키던데 그게 alt+방향키로 쉽게 될 줄이야... 내 컴퓨터가 이상한건지 단축키가 조금씩 다르지만 적응하니 더 편하고 괜찮다!
