--- a/1. HTML의 요소(1).md
+++ b/1. HTML의 요소(1).md
@@ -97,3 +97,9 @@ html 내부에 JavaScript 직접 쓰기 위해 사용하기도 한다.
 ```
 - <script> 태그를 만나면 태그 안의 내용을 먼저 실행하기 때문에 렌더링 중이던 화면이 중단되어 로딩 시간이 길어짐.	
 - <body> 태그 마지막에 쓰는 것을 권장하고 있음.
+	
+<br>
+-----
+<br>
+	
+> head안에 있는 태그들은 항상 !를 활용해서 불러와서 크게 의미를 두지 않았다. 이 요소들을 따로 부르는 이름이 있는 줄 모르고 있었다. 이번기회로 meta tag에 대해 알아가는 것 같아서 좋았다. 뿐만아니라 HTML의 기본 문법에 대해 복기하는 계기가 되었다.
