Create 1. HTML의 요소(1).md

--- a/1. HTML의 요소(1).md
+++ b/1. HTML의 요소(1).md
@@ -104,5 +104,4 @@ html 내부에 JavaScript 직접 쓰기 위해 사용하기도 한다.
 	
 <br>
 	
-> head안에 있는 태그들은 항상 !를 활용해서 불러와서 크게 의미를 두지 않았다. 이 요소들을 따로 부르는 이름이 있는 줄 모르고 있었다. 
-	이번기회로 meta tag에 대해 알아가는 것 같아서 좋았다. 뿐만아니라 HTML의 기본 문법에 대해 복기하는 계기가 되었다.
+> head안에 있는 태그들은 항상 !를 활용해서 불러와서 크게 의미를 두지 않았다. 이 요소들을 따로 부르는 이름이 있는 줄 모르고 있었다.<br>이번기회로 meta tag에 대해 알아가는 것 같아서 좋았다. 뿐만아니라 HTML의 기본 문법에 대해 복기하는 계기가 되었다.
