--- a/1. HTML의 요소(1).md
+++ b/1. HTML의 요소(1).md
@@ -7,8 +7,131 @@
 <br>
 
 ## 1) HTML이란?
-### HTML 로 작성된 언어
+### HTML의 생김새
+- 웹페이지를 구성하고 있는 요소(element)를 '태그'로 작성
+- 태그를 통해 어떤 요소인지 명시
+- 태그의 이름은 HTML5 웹 표준에 맞게 작성
+```
+<h1>This is Title!</h1>
+<h2>Fix you</h2>
+<p>
+	HTML은 줄바꿈을 인식하지 못한다.(br tag 사용)
+</p>
+```
+- 여는 태그
+- 닫는 태그
+- 내용 : 요소의 내용
+- 요소 : 여는 태그, 닫는 태그, 내용을 통틀어 요소라 함
+<br>
+> 태그의 경우, 대소문자를 구분하진 않지만 가독성을 높이기 위하여 모두 소문자로 작성하는 것을 권장
 
+<br>
+
+### 빈 요소(Empty elements)
+내용이 없는 요소를 빈 요소라고 부른다.
+- ex) 이미지, 수평선, 줄바꿈 등
+- 닫는 태그를 추가로 명시하지 않아도 된다.
+- Empty element, Self-Colsing element ...
+```
+<img src = "~" /> // 슬래시 작성은 HTML5와서 사용 거의X, 그러나 명시적 요소로 사용 ok
+```
+
+<br>
+
+### 요소의 중첩(Nesting)
+요소 안에 다른 요소가 들어가는 포함관계가 가능 함
+- 중첩 된 요소의 경우, 열린 순서의 반대로 닫혀야 함
+- 서로의 포함관계를 가독성있게 구분하기 위해 들여쓰기 사용
+```
+<head>
+</head>
+<body> // head와 body는 포함관계x
+	<ul> // body의 자식
+		<li></li> // ul의 자식
+	</ul>
+	<h1> 요소1 <strong> 요소2 </strong> 요소3 </h1> // 요소 3개
+<body>
+```
+
+<br>
+
+### 주석(Comments)
+- 브라우저는 주석을 무시해 사용자에게 주석을 보이지 않게 함
+- 메모 추가, 사용하지 않는 코드를 임시로 처리하기 위한 방법으로 사용
+- 남발하지 말 것
+
+<br>
+
+### HTML문서의 구조
+```
+<!DOCTYPE html> // 엡 표준화 전 버전 표시
+<html> // 페이지 전체 컨텐츠를 감싸는 root 요소
+	<head> // 웹브라우저 화면에 직접적으로 나타나지 않는 정보
+		<meta tag> // 문서의 일반적인 정보, 문자 인코딩
+		<title> // 문서 제목
+	</head>
+	<body> // 웹브라우저 화면에 나타나는 모든 요소
+	</body> 
+</html>
+```
+
+<br>
+
+### HEAD tag
+기계가 식별할 수 있는 웹 펭지 문서 정보(meta data)를 담음
+- 제목, 스크립트, 스타일시트 등
+- 사람이 읽을 수 없음. 기계 처리 목적
+- title 요소는 하나만 됨
+- 태그 생략은 지양
+
+<br>
+
+### BODY tag
+화면에 보여지는 모든 요소들이 담김
+- mdn 문서 중 휴지통 : 폐기 된 태그
+- 태그 생략 지양
+
+<br>
+
+### 태그를 구분짓는 특성
+#### 구획을 나누는 태그
+- 단독을 사용했을 때 보이지 않음
+- 요소의 그룹화용
+<br>
+#### 그 자체로 요소인 태그
+- 단독으로 사용시 눈에 보임
+
+<br>
+
+### 블록과 인라인
+#### Block
+- 블록 요소는 새로운 줄에서 시작함
+- 좌우 양쪽으로 최대한 늘어남
+- 부모 요소의 범위 안에서 혼자 다 차지함
+<br>
+#### Inline
+- 인라인 요소는 줄의 어느 곳에서든 시작 가능
+- 바로 이전 요소가 끝나는 지점부터 시작
+- content만큼만 차지함
+<br>
+> 같은 형태의 다른 요소를 안에 포함할 수 있음
+> 대부분의 블록 요소는 인라인 요소도 포함 가능
+> 그러나 인라인 요소는 블록 요소를 포함 할 수 없음
+
+<br>
+### 콘텐츠 카테고리
+HTML5에선 비슷한 특징을 가진 요소끼리 묶어 7가지 카테고리로 세분화 함
+하나의 HTML 요소가 여러 콘텐츠 카테고리 내 포함관계에 들어갈 수 있음
+
+	- 메타데이터 콘텐츠 : 문서의 메타 데이터, 다른 문서를 가리키는 링크 등을 나타내는 요소
+	- 플로우 컨텐츠 : 웹 페이지상에 메타데이터를 제외하고 거의 모든 요소. 보통 텍스트나 임베디드 콘텐츠를 포함
+	- 섹션 콘텐츠 : 웹 문서의 구획을 나눌 때 사용 (heading, section 교집합x)
+	- 헤딩 콘텐츠 : 섹션 제목과 관련된 요소
+	- 프레이징 콘첸츠 : 문단에서 텍스트를 마크업 할 때 사용
+	- 임베디드 콘텐츠 : 이미지나 비디오 등 외부 소스를 가져오거나 삽입할 때 사용되는 요소
+	- 인터렉티브 콘텐츠 : 사용자와의 상호작용을 위한 컨텐츠 요소
+
+<br>
 <br>
 
                     
