Update 2. HTML의 요소(2).md

--- a/2. HTML의 요소(2).md
+++ b/2. HTML의 요소(2).md
@@ -1,1 +1,18 @@
+> 텍스트 요소, 구조를 나타내는 요소
 
+<br>
+<br>
+
+# 2. HTML의 요소(2)
+
+<br>
+
+## 1) 텍스트 요소
+### 제목 h1~h6
+<h1>~<h6> 요소는 6단계의 구획 제목을 나타낸다.
+```
+<html>
+	<body>
+		<h1>Heding level 1</h1>
+<html>
+- <h1>이 가장 높고 <h6>이 가장 낮다.
