--- a/2. HTML의 요소(2).md
+++ b/2. HTML의 요소(2).md
@@ -8,8 +8,9 @@
 <br>
 
 ## 3) 텍스트 요소
-### 제목 <h1>~<h6>
-<h1>~<h6> 요소는 6단계의 구획 제목을 나타낸다.
+### 제목 &lt;h1&gt;~&lt;h6&gt;
+&lt;h1&gt;~&lt;h6&gt; 요소는 6단계의 구획 제목을 나타낸다.
+```
 
 	<html>
 		<body>
@@ -22,34 +23,34 @@
 		</body>
 	</html>
 <html>
-
-- 구획 단계는 <h1>이 가장 높고 <h6>이 가장 낮음
+```
+- 구획 단계는 &lt;h1>이 가장 높고 &lt;h6>이 가장 낮음
 - 글씨 크기를 위해 제목 태그를 사용하지 않을 것을 권장(CSS style 사용)
 - 제목은 순차적으로 기입하는 것을 권장
-- 웹 접근성을 위해 전체 페이지의 목적을 설명하는 <h1>은 페이지 당 하나를 권장
+- 웹 접근성을 위해 전체 페이지의 목적을 설명하는 &lt;h1>은 페이지 당 하나를 권장
 
-> 검색 엔진이 <h1>을 먼저 찾아 웹 페이지의 전체 내용을 아우르는 것을 인지.
+> 검색 엔진이 &lt;h1>을 먼저 찾아 웹 페이지의 전체 내용을 아우르는 것을 인지.
 
 <br>
 
-### 본문 - <p>
-<p> 요소는 하나의 문단을 나타낸다. 
+### 본문 - &lt;p&gt;
+&lt;p&gt; 요소는 하나의 문단을 나타낸다. 
 HTML에서 문단은 이미지나 입력 폼 등 서로 관련있는 콘텐츠 무엇이나 될 수 있다.
 
-- 문단은 블록 레벨 요소이다. 닫는 태그 </p>
+- 문단은 블록 레벨 요소이다. 닫는 태그 &lt;/p&gt;
 - 문장의 한 줄 높이가 여백으로 들어감
-- 여백을 넣기 위해서 <p> tag 사용은 지양
+- 여백을 넣기 위해서 &lt;p&gt; tag 사용은 지양
 
 > lorem을 사용하면 긴 텍스트를 보여준다.
 
 <br>
 
-### 본문 - <br>
-<br> 요소는 텍스트 안에 줄바꿈(캐리지 리턴)을 생성한다.
+### 본문 - &lt;br&gt;
+&lt;br&gt; 요소는 텍스트 안에 줄바꿈(캐리지 리턴)을 생성한다.
 
 - 주소나 시조 등 줄의 구분이 중요한 내용을 작성할 때 유용
-- HTML은 space,enter를 모두 무시하기 때문에 <br> 태그가 대신함
-- 내용이 없는 빈 요소, 명시적 사용으로 <br/> 가능
+- HTML은 space,enter를 모두 무시하기 때문에 &lt;br&gt; 태그가 대신함
+- 내용이 없는 빈 요소, 명시적 사용으로 &lt;br/&gt; 가능
 - 여백을 늘리고 싶을 때 <br> 태그를 여러 번 사용하는 것이 아닌 CSS style을 활용
 - 문단을 <br>로 나누는 것은 나쁜 사례이며 탐색하는 사용자에게도 문제가 됨
 
