--- a/2. HTML의 요소(2).md
+++ b/2. HTML의 요소(2).md
@@ -11,7 +11,6 @@
 ### 제목 &lt;h1&gt;~&lt;h6&gt;
 &lt;h1&gt;~&lt;h6&gt; 요소는 6단계의 구획 제목을 나타낸다.
 ```
-
 	<html>
 		<body>
 			<h1>Heading h1</h1>
@@ -24,7 +23,7 @@
 	</html>
 <html>
 ```
-- 구획 단계는 &lt;h1>이 가장 높고 &lt;h6>이 가장 낮음
+- 구획 단계는 &lt;h1&gt;이 가장 높고 &lt;h6>&gt;이 가장 낮음
 - 글씨 크기를 위해 제목 태그를 사용하지 않을 것을 권장(CSS style 사용)
 - 제목은 순차적으로 기입하는 것을 권장
 - 웹 접근성을 위해 전체 페이지의 목적을 설명하는 &lt;h1>은 페이지 당 하나를 권장
@@ -251,3 +250,14 @@ HTML에서 <,>," alc &은 특수 문자이다.(HTML 구문 자체 일부)<br>
 	' : &apos;
 	& : &amp;
 	space : &nbsp; (none braking space)
+
+<br>
+<br>
+	
+-----
+	
+<br>
+<br>
+	
+> 이번 강의를 토대로 &lt;br&gt;를 여러번 쓰면 안된다는 것을 새롭게 알았다. 단순 줄바꿈 태그인 줄 알았는데 각 요소들의 쓰임새에 따라 써야한 다는 것을 다시 알게 되었다.<br> &lt;pre&gt; 태그는 처음 봤는데 space가 안될 때 사용하기 좋을 것 같았다!
+
