Update 2. HTML의 요소(2).md

--- a/2. HTML의 요소(2).md
+++ b/2. HTML의 요소(2).md
@@ -259,5 +259,5 @@ HTML에서 <,>," alc &은 특수 문자이다.(HTML 구문 자체 일부)<br>
 <br>
 <br>
 	
-> 이번 강의를 토대로 &lt;br&gt;를 여러번 쓰면 안된다는 것을 새롭게 알았다. 단순 줄바꿈 태그인 줄 알았는데 각 요소들의 쓰임새에 따라 써야한 다는 것을 다시 알게 되었다.<br> &lt;pre&gt; 태그는 처음 봤는데 space가 안될 때 사용하기 좋을 것 같았다!
+> 이번 강의를 토대로 &lt;br&gt;를 여러번 쓰면 안된다는 것을 새롭게 알았다.<br>단순 줄바꿈 태그인 줄 알았는데 각 요소들의 쓰임새에 따라 써야한 다는 것을 다시 알게 되었다.<br> &lt;pre&gt; 태그는 처음 봤는데 space가 안될 때 사용하기 좋을 것 같았다!
 
