Update 4. HTML의 요소(4).md

--- a/HTML/3. HTML의 요소(3).md
+++ b/HTML/3. HTML의 요소(3).md
@@ -1,4 +1,4 @@
-> 텍스트 요소, 구조를 나타내는 요소
+> 구조를 나타내는 요소
 
 <br>
 <br>
@@ -91,25 +91,7 @@
 - 더 적합한 의미를 가진 요소가 없을 때 사용
 - 주로 제목을 포함하지만 항상 그런 것은 아님
 
-
 > &lt;section&gt;과 &lt;article&gt;은 서로의 태그 안에 사용할 수 있다.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 <br>
@@ -120,4 +102,4 @@
 <br>
 <br>
 	
-> 후기
+> 시멘틱 태그에 대해 더 탄탄하게 공부할 수 있었다.<br>솔직히 아직도 article을 사용해도 되는 부분인가? 고민하게 되지만 많이 쓰다보면 적응하겠지! 
