--- a/HTML/5. HTML의 요소(5).md
+++ b/HTML/5. HTML의 요소(5).md
@@ -9,12 +9,22 @@
 
 ## 7) 폼 관련 요소
 ### &lt;form&gt;
+&lt;form&gt;요소는 정보를 제출하기 위한 대화형 컨트롤을 포함하는 문서 구획을 나타낸다.
 
+- 일방적으로 사용자에게 정보를 전달하는게 아닌 정보를 다시 돌려받기도 함
+- form 요소에 한계가 있기 때문에 더 섬세한 컨트롤은 JS로 함
 
 <br>
 
 ### &lt;form&gt; - action, method 속성
 
+* action: 지정한 경로로 form 정보를 보내줌
+* method: 양식을 제출할 때 사용할 HTTP 메서드
+- post: 양식 데이터를 요청 본문으로 전송함. 서버에 보이지않게 전송
+- get: 양식 데이터를 action URL과 ? 구분자 뒤에 이어붙여 전송함. 보안 취약
+- dialog: 양식이 &lt;dialog&gt; 안에 위치한 경우, 제출과 함께 대화 상자를 닫음
+
+> button, input type="submit", input type="image" 요소의 formmethod 특성으로 재정의 가능
 ### &lt;label&gt;, &lt;input&gt;
 
 <br>
