Update 5.HTML의 요소(5)

--- a/HTML/5. HTML의 요소(5).md
+++ b/HTML/5. HTML의 요소(5).md
@@ -160,4 +160,5 @@
 <br>
 
 > draggable을 이번 강의를 통해 처음 들어봤다..! 아직 HTML에서 모르는 부분이 꽤 있구나 싶었다.<br>
-> 로그인 폼을 구현할 때 항상 JS를 통해 if문으로 값 체크를 했는데 앞으로 간단한 폼은 required라는 속성을 사용하면 될 것 같다.
+> 로그인 폼을 구현할 때 항상 JS를 통해 if문으로 값 체크를 했는데 앞으로 간단한 폼은 required라는 속성을 사용하면 될 것 같다.<br>
+> 매번 input이란 좋은 HTML 태그가 있는데 왜 어렵게 JS로 했을까...반성하고 있다.ㄱ-
