--- a/HTML/4. HTML의 요소(4).md
+++ b/HTML/4. HTML의 요소(4).md
@@ -48,7 +48,7 @@ list item, 단일 아이템을 표현하는 태그
 &lt;table&gt;요소는 행과 열로 이루어진 표를 나타낸다.
 
 - HTML5에선 시멘틱 태그가 많아 table을 사용해 레이아웃을 만드는 것을 지양한다.
-- 원래 border가 없음!
+- border 속성은 CSS에서 다루는 추세
 - tr : 행
 - th(table head) : 열을 대표하는 총칭
 - td : 열
