--- a/CSS/1. CSS 선택자.md
+++ b/CSS/1. CSS 선택자.md
@@ -29,7 +29,7 @@ h2 {
 }
 ```
 - 특정 요소 하나에만 적용되는 유일한 선택자
-- CSS에서 태그 앞에 <pre><code>#</code></pre>을 붙임
+- CSS에서 태그 앞에 <pre>#</pre>을 붙임
 
 3. Class
 ```css
@@ -39,7 +39,7 @@ h2 {
 ```
 - 스타일을 공통 적용해야 할 요소들을 그룹화 하기 위한 선택자
 - 여러 요소에 중복 가능
-- CSS에서 태그 앞에 <pre><code>.</code></pre>을 붙여 적용
+- CSS에서 태그 앞에 <pre>.</pre>을 붙여 적용
 
 <br>
 <br>
@@ -63,4 +63,3 @@ a[href="#"] {
     background-color: green;
   }
   ```
-  
