--- a/CSS/1. CSS 선택자.md
+++ b/CSS/1. CSS 선택자.md
@@ -7,7 +7,7 @@
   
 <br>
 
-## 1) 선택자(Selector)의 종류
+## 선택자(Selector)의 종류
 CSS 선택자는 CSS 규칙을 적용할 요소를 정의한다.
 
 <br>
@@ -397,3 +397,12 @@ div {
   ```!important``` > ```inline``` > ```ID``` > ```Class``` / ```attribute``` / ```pseudo class``` > ```Type(tag)``` > ```*``` > ```inherited```
   ```!important```를 남용하지 말아야 함!!!!
   
+
+<br>
+<br>
+
+-----
+
+> selector는 알고 있지만 막상 활용을 잘 못했다. 가상클래스 선택자는 몇몇개 활용해봤지만
+> 크게 child와 of-type의 차이점을 인지하지 못한채로 그냥 쓰고 있었다..ㅎㅎ
+> input 같은 경우도 html에서 속성들을 나열하다보면 길어져서 보기 불편했었는데 앞으로 속성 선택자를 적극 활용해야겠다!
