Update 4. box model.md

--- a/CSS/1. CSS 선택자.md
+++ b/CSS/1. CSS 선택자.md
@@ -394,7 +394,7 @@ div {
 1. 선언된 곳
 2. 명시도 - 적용 범위가 적을 수록 명시도가 높음
 3. 코드 위치
-  ```!important``` > ```inline``` > ```ID``` > ```Class``` / ```attribute``` / ```pseudo class``` > ```Type(tag)``` > ```*``` > ```inherited```
+  ```!important``` > ```inline``` > ```ID``` > ```Class``` / ```attribute``` / ```pseudo class``` > ```Type(tag)``` > ```*``` > ```inherited``` <br>
   ```!important```를 남용하지 말아야 함!!!!
   
 
@@ -405,6 +405,6 @@ div {
 
 <br>
 
-> selector는 알고 있지만 막상 활용을 잘 못했다. 가상클래스 선택자는 몇몇개 활용해봤지만
-> 크게 child와 of-type의 차이점을 인지하지 못한채로 그냥 쓰고 있었다..ㅎㅎ
+> selector는 알고 있지만 막상 활용을 잘 못했다. 가상클래스 선택자는 몇몇 개 활용해봤지만 <br>
+> 크게 child와 of-type의 차이점을 인지하지 못한채로 그냥 쓰고 있었다..ㅎㅎ<br>
 > input 같은 경우도 html에서 속성들을 나열하다보면 길어져서 보기 불편했었는데 앞으로 속성 선택자를 적극 활용해야겠다!
