--- a/CSS/2. 폰트 관련 속성.md
+++ b/CSS/2. 폰트 관련 속성.md
@@ -118,4 +118,6 @@ span {
 
 <br> 
 
-> text, font 속성은 안보고도 칠 수 있다!! 사실 대부분 한국어로 사용하다보니 영어 텍스트 관련 속성은 <br> 잘 안쓰게 되는 것 같다. 이 기회에 transform 속성을 더 적극적으로 사용해야겠다. 굳이 텍스트를 바꾸지 않아도 <br> CSS로만 다룰 수 있는건 엄청난 편리하니까 :3
+> text, font 속성은 안보고도 칠 수 있다!! 사실 대부분 한국어로 사용하다보니 영어 텍스트 관련 속성은 <br>
+> 잘 안쓰게 되는 것 같다. 이 기회에 transform 속성을 더 적극적으로 사용해야겠다. <br>
+> 굳이 텍스트를 바꾸지 않아도 CSS로만 모양을 다룰 수 있는건 엄청난 편리함이니까 :3
