Update 5. 레이아웃과 색상, 배경.md

--- a/CSS/4. 박스모델.md
+++ b/CSS/4. 박스모델.md
@@ -101,7 +101,7 @@ border-style: outset;
 
 <br>
 
-### 테두리 - border(shorthand)
+### ✔ 테두리 - border(shorthand)
 ```css
 .box {
     border: 1px solid black;
