Update 6. CSS 변형과 전환.md

--- a/CSS/2. 폰트 관련 속성.md
+++ b/CSS/2. 폰트 관련 속성.md
@@ -12,7 +12,7 @@
 - font-size : 글자의 크기
   + 대부분의 브라우저는 16px를 기본으로 함
 - font-style : 문자의 변화
-  + normal(defalt), italic, oblique... 
+  + normal(default), italic, oblique... 
 - font-weight : 굵기
   + normal - 400
   + bold - 700...
