--- a/CSS/4. 박스모델.md
+++ b/CSS/4. 박스모델.md
@@ -12,7 +12,7 @@
 
 - content: 콘텐츠가 표시되는 영역
 - padding: 콘텐츠와 테두리(border) 사이 여백
-- border: padding과 margin 사이 테두리(defalt = 0)
+- border: padding과 margin 사이 테두리(default = 0)
 - margin: 가장 바깥 쪽 레이어
   - 콘텐츠와 패딩, 테두리를 둘러며 해당 박스와 다른 요소 사이 공백 역할
 
@@ -80,7 +80,7 @@ margin: unset;
 
 ### ✔ 테두리 - border-style, border-width, border-color
 
-- defalt: none
+- default: none
 - border-style
 ```css
 border-style: none;
