--- a/JavaScript/1. 변수와 자료형.md
+++ b/JavaScript/1. 변수와 자료형.md
@@ -256,6 +256,7 @@ console.log(typeof console.log); // function
     ```
 
     <br>
+
     __2. JSON 객체를 이용__
      stringify는 객체를 문자열로 변환하는데 이때 원본 객체와의 참조가 끊김
 
@@ -283,3 +284,52 @@ console.log(typeof console.log); // function
     console.log(admin.sizes.weight); // 72
     console.log(user.sizes.height); // 180 
      ```
+<br>
+<br>
+
+### ✔ 형 변환
+JavaScript는 느슨한 타입 언어 혹은 동적 타입 언어로, 변수의 자료형을 명시적으로 선언할 필요가 없다.
+
+- 연산자로 인한 계산이나 변수에 전달되는 값은 자동으로 암묵적 형 변환 수행
+- 강제적 형 변환을 위해 자료형 함수를 이용해 명시적 형 변환 수행
+
+<br>
+
+1. String
+```js
+console.log(String(123)); // 123
+console.log(String(1 / 0)); // Infinity
+console.log(String(-1 / 0)); // -Infinity
+console.log(String(NaN)); // NaN
+console.log(String(true)); // true
+console.log(String(false)); //false
+console.log(String(undefined)); // undefined
+console.log(String(null)); // null
+```
+<br>
+
+2. Number
+```js
+console.log(String("")); // 0
+console.log(String("123")); // 123
+console.log(String"hello")); // NaN
+console.log(String("123hello")); // NaN
+console.log(String(true)); // 1
+console.log(String(false)); // 0
+console.log(String(null)); // 0
+console.log(String(undefined)); // NaN
+```
+<br>
+
+3. Boolean
+```js
+console.log(String("")); // false
+console.log(String("123")); // true
+console.log(String"hello")); // true
+console.log(String("0")); // true
+console.log(String(0)); // false
+console.log(String(123)); // true
+console.log(String(NaN)); // false
+console.log(String(null)); // false
+console.log(String(false)); // false
+```
