--- a/JavaScript/2. JavaScript의 연산자.md
+++ b/JavaScript/2. JavaScript의 연산자.md
@@ -5,7 +5,7 @@
 <br>
 
 ## 1) 산술대입 연산자
-### 연산자
+### ✔ 연산자
 프로그램에서 데이터를 처리하여 결과를 산출할 목적으로 사용되는 문자
 
 - 연산의 대상 값: 피연산자
@@ -14,7 +14,7 @@
 <br>
 <br>
 
-### 연산자 우선순위
+### ✔ 연산자 우선순위
 순위가 높을 수록(내림차순) 우선 실행됨
 
 <br>
@@ -23,7 +23,7 @@
 <br>
 <br>
 
-### 산술 연산자
+### ✔ 산술 연산자
 수학적 계산을 위해 제공하는 연산자
 
 ```js
@@ -45,7 +45,7 @@ console.log(2 ** 3); // 8
 <br>
 <br>
 
-### 대입 연산자
+### ✔ 대입 연산자
 계산한 결과를 하나의 변수에 저장하기 위한 연산자
 
 ```js
@@ -68,7 +68,7 @@ console.log(num4); // -333
 <br>
 <br>
 
-### 복합 대입 연산자
+### ✔ 복합 대입 연산자
 산술 연산자로 피연산자를 계산해 결과값을 한 번에 대입시켜주는 연산자
 
 ```js
@@ -102,7 +102,7 @@ console.log(result5); // 1
 <br>
 <br>
 
-### 증가, 감소 연산자
+### ✔ 증가, 감소 연산자
 숫자 1만큼 증가, 감소 시킬 때 사용되는 연산자
 
 - 증가 연산자
@@ -146,7 +146,7 @@ console.log(result5); // 1
 <br>
 
 ## 2) 비교논리 연산자
-### 비교 연산자
+### ✔ 비교 연산자
 좌항과 우항의 피연산자를 비교한 뒤 결과값을 논리적 자료형으로 반환하는 연산자
 
 - ```==``` : 동등 비교 연산자, 단순 값의 같음을 비교
@@ -155,9 +155,9 @@ console.log(result5); // 1
 <br>
 <br>
 
-### 논리 연산자
+### ✔ 논리 연산자
 좌항과 우항의 피연산자 간 논리값을 연산하여 Boolean을 결과로 얻는 연산자
 
-- ```a || b``` : a가 b보다 크면 true 아니면 false
-- ```a && b``` : a가 b보다 작으면 true 아니면 false
-- ```!a```
+- ```a || b``` : OR, a가 b보다 크면 true 아니면 false
+- ```a && b``` : AND, a가 b보다 작으면 true 아니면 false
+- ```!a``` : NOT, a가 b보다 크거나 같으면 true 아니면 false
