Update 1. 변수와 자료형.md

--- a/JavaScript/1. 변수와 자료형.md
+++ b/JavaScript/1. 변수와 자료형.md
@@ -1,5 +1,4 @@
 <br>
-<br>
 
 # 1. 변수와 자료형
 <br>
@@ -58,6 +57,8 @@ console.log(name); // jiyeong
 console.log(name2); // jiyeong
 let name2 = "jieyong";
 ```
+
+<br>
 <br>
 <br>
 
@@ -83,7 +84,7 @@ let name2 = "jieyong";
 ### ✔ typeof
 인수의 자료형을 반환하는 연산자
 
-- 연산자인 typeof x와 함수인 typeof(x)로 문법 지원
+- 연산자인 typeof x와 함수인 typeof(x)로 문법 지원 <br>
 
 ```js
 console.log(typeof undefined); // undefined
