--- a/JavaScript/2. JavaScript의 연산자.md
+++ b/JavaScript/2. JavaScript의 연산자.md
@@ -107,7 +107,8 @@ console.log(result5); // 1
 
 - 증가 연산자
   - ++(피연산자)
-  - (피연산자)++ <br>
+  - (피연산자)++ 
+  <br>
   ```js
   let num, result;
 
@@ -126,7 +127,8 @@ console.log(result5); // 1
 
 - 감소 연산자
   - --(피연산자)
-  - (피연산자)-- <br>
+  - (피연산자)-- 
+  <br>
   ```js
   let num, result;
 
