Update 4. 함수와 메서드.md

--- a/JavaScript/4. 함수와 메서드.md
+++ b/JavaScript/4. 함수와 메서드.md
@@ -1,6 +1,6 @@
 <br>
 
-# 4. 함수와 메소드(1)
+# 4. 함수와 메서드
 
 <br>
 
@@ -177,3 +177,39 @@ hello_func(); // hello
 obj.hello_func(); // hello
 list[2](); // hello
 ```
+<br>
+<br>
+<br>
+
+## 2) method
+### method(메서드)란?
+객체에 저장된 값이 함수인 경우
+
+```js
+let user = {
+  name: "park",
+  age: 28,
+  hello_func() {
+    console.log("hi");
+  },
+};
+```
+<br>
+<br>
+
+### ✔ this
+메서드에서 객체 내부의 속상(property)값을 접근할 수 있는 지시자
+```js
+let obj = {
+  name: "park",
+  age: 91,
+  hello_func() {
+    console.log(
+      "hello" + this.name
+    );
+  },
+};
+```
+- this를 사용하는 method는 추가 가능함
+- 이 떄 this는 runtime에 결정되어 __호출한 객체에 따라 다름__ 
+- 객체의 property값을 각각 달리 핸들링 할 수 있는 것이 장점
