Update 7. 고차함수와 생성자.md

--- a/JavaScript/7. 고차함수와 생성자.md
+++ b/JavaScript/7. 고차함수와 생성자.md
@@ -96,32 +96,141 @@ console.log(fruits.sort(descending_order));
 <br>
 
 ## 2) 그 외 고차함수
+### ✔ forEach()
+배열 요소 별 콜백 함수 각각에 실행: Array.forEach()
+```js
+const nums = [1, 2, 3];
 
+nums.forEach(function(i) {
+  console.log(i); // 123
+});
+```
+<br>
+<br>
 
+### ✔ map()
+배열 요소 별 함수 호출 시키고 각 결과를 배열로 반환: Array.map()
+```js
+const nums = [1, 2, 3, 4, 5];
+let use_map = nums.map(function (item) {
+  return item * 2;
+});
+console.log(use_map); // [2, 4, 6, 8, 10]
+```
+<br>
+<br>
 
+### ✔ find()
+콜백 함수의 조건을 만족하는 단 하나의 값만 반환: Array.find()
+```js
+let users = [
+  { name: "bob", age: 17, job: false },
+  { name: "alice", age: 20, job: false },
+  { name: "john", age: 27, job: true },
+];
 
+let find_job = users.find(function(user) {
+  return user.job == false;
+});
+console.log(find_job); // { name: "bob", age: 17, job: false }
 
+let find_age = users.find(function(user) {
+  return user.age > 19;
+});
+console.log(finde_age); //  { name: "alice", age: 20, job: false }, 하나만 반환
+```
+<br>
+<br>
 
+### ✔ filter()
+콜백 함수의 조건을 만족하는 값을 배열로 반환: Array.filter()
+```js
+let users = [
+  { name: "bob", age: 17, job: false },
+  { name: "alice", age: 20, job: false },
+  { name: "john", age: 27, job: true },
+];
 
+let find_job = users.find(function(user) {
+  return user.job == false;
+});
+console.log(find_job);
+/* { name: "bob", age: 17, job: false },
+ { name: "alice", age: 20, job: false } */
 
+let find_age = users.find(function(user) {
+  return user.age > 19;
+});
+console.log(finde_age); 
+/* { name: "alice", age: 20, job: false },
+  { name: "john", age: 27, job: true } */
+```
+<br>
+<br>
 
+### ✔ reduce()
+요소 별 함수 수행 누적 결과값 반환: Array.reduce()
 
+- accumulator: 이전 함수 결과(initial로 초기값 설정 가능)
+```js
+let nums = [1, 2, 3, 4, 5];
+let call_count = 0;
 
+console.log("result\tvalue\tindex");
+let sum = nums.reduce(function(accumulator, item, index, array) {
+  console.log(accumulator, "\t\t", item, "\t\t", index);
+  call_count++;
+  return accumulator + item;
+}, 0); // initial이 없으면 index 1부터 시작(2부터)
 
-
-
-
-
-
-
-
-
-
+console.log(call_count); // 5
+console.log(sum); // 15, 합산
+```
 <br>
 <br>
 <br>
 
-
-
-## 2) 그 외 고차함수
 ## 3) 생성자와 Collection
+### ✔ 생성자 함수
+유사한 객체를 다중으로 만들 때 사용되는 함수
+
+- 일반적으로 생성자 함수의 첫 글자는 대문자
+- 생성자 함수로 객체 생성 시 new 연산자를 통해 객체 생성
+```js
+function FishBread(flavor, price) {
+  this.flavor = flavor;
+  this.price = price;
+  this.base = "flour";
+}
+
+const bread1 = new FishBread("cream", 1200);
+const bread2 = new FishBread("redbean", 1300);
+const bread3 = new FishBread("milk", 1500);
+
+console.log(bread1); // { flavor: 'cream', price: 1200, base: 'flour'}
+console.log(bread2); // { flavor: 'cream', price: 1300, base: 'flour'}
+console.log(bread3); // { flavor: 'cream', price: 1500, base: 'flour'}
+```
+
+<br>
+<br>
+
+### ✔ new.target
+new와 함께 호출했는지 확인 가능
+```js
+function FishBread(name) {
+  if (!new.target) {
+    return new FishBread(flavor, price);
+  }
+  this.flavor = flavor;
+  this.price = price;
+  this.base = "fish";
+}
+const bread1 = new FishBread("cream", 1200);
+const bread2 = new FishBread("redbean", 1300);
+const bread3 = new FishBread("milk", 1500);
+
+console.log(bread1);
+console.log(bread2);
+console.log(bread3);
+```
