--- a/JavaScript/1. 변수와 자료형.md
+++ b/JavaScript/1. 변수와 자료형.md
@@ -67,7 +67,7 @@ let name2 = "jieyong";
 자료형 : 목적에 따라 특별한 성질이나 정해진 범주를 갖고 있는 데이터의 종륲
 
 - 6가지의 원시타입, 1가지의 객체 타입 자료형으로 구성
-  1. 원시타입
+  1. __원시타입__
     - Boolean
     - null
     - undefined
@@ -75,7 +75,7 @@ let name2 = "jieyong";
     - string
     - symbol : 문자열과 함께 객체 property로 사용, ES6에 추가
 
-  2. 객체타입
+  2. __객체타입__
     - object 
 
 <br>
@@ -111,13 +111,11 @@ console.log(typeof console.log); // function
 <br>
 
 ### ✔ 원시 타입 : null & undefined
-- null
+- __null__
   - null : 비어있다는 의미로 표현되는 자료형
   - 존재하지 않는(nothing), 비어 있는(empty), 알 수 업슨(unknown)값을 나타내는데 사용
 
-  <br>
-
-- undefined
+- __undefined__
   - 값이 할당 되어있지 않은 상태를 나타날 때 사용되는 자료형
   - 변수 선언 후 초기화 하지 않으면 자동 할당 됨
 
@@ -138,9 +136,9 @@ console.log(typeof console.log); // function
 문자, 문자열을 표현하는 자료형
 
 - 3가지 종류 따옴표로 표현
-  1. 큰 따옴표 : ""
-  2. 작은 따옴표 : ''
-  3. 역 따옴표(백틱) : ``
+  1. 큰 따옴표 : ```""```
+  2. 작은 따옴표 : ```''```
+  3. 역 따옴표(백틱) : ```(``)```
 
 <br>
 <br>
@@ -163,7 +161,7 @@ console.log(typeof console.log); // function
   - __얕은 복사__
     ⚠ 문제점 : 객체 내 또 다른 객체가 있으면 복사되지 않음
     <br>
-    __1. for문 이용__
+    1. __for문 이용__
 
     ```js
     // 얕은 복사 1
@@ -185,7 +183,7 @@ console.log(typeof console.log); // function
     ```
     <br>
 
-    __2. Object.assing() 함수 이용__
+    2. __Object.assing() 함수 이용__
 
     ```js
     // 얕은 복사 2
@@ -206,7 +204,7 @@ console.log(typeof console.log); // function
     ```
     <br>
 
-    __3. 전개 연산자(Spread Operator)를 이용(ES6부터 지원)__
+    3. __전개 연산자(Spread Operator)를 이용(ES6부터 지원)__
 
     ```js
     // 얕은 복사 3    
@@ -230,7 +228,7 @@ console.log(typeof console.log); // function
 
   - __깊은 복사__
     내부에 객체가 있으면 자동으로 얕은 복사 함
-    __1. 재귀 함수를 이용__
+    1. __재귀 함수를 이용__
 
     ```js
     let user = {
@@ -258,10 +256,10 @@ console.log(typeof console.log); // function
 
     <br>
 
-    __2. JSON 객체를 이용__
-     stringify는 객체를 문자열로 변환하는데 이때 원본 객체와의 참조가 끊김
+    2. __JSON 객체를 이용__
+    stringify는 객체를 문자열로 변환하는데 이때 원본 객체와의 참조가 끊김
 
-     ```js
+    ```js
     /* stringify : js object -> string,
       parse : string -> js object
       어떤 단계가 있던 간에 새로운 object로 만들어줌
@@ -284,7 +282,7 @@ console.log(typeof console.log); // function
     console.log(admin_json.sizes.height); // 179
     console.log(admin.sizes.weight); // 72
     console.log(user.sizes.height); // 180 
-     ```
+    ```
 <br>
 <br>
 
@@ -296,7 +294,8 @@ JavaScript는 느슨한 타입 언어 혹은 동적 타입 언어로, 변수의 
 
 <br>
 
-1. String
+1. __String__
+
 ```js
 console.log(String(123)); // 123
 console.log(String(1 / 0)); // Infinity
@@ -309,7 +308,8 @@ console.log(String(null)); // null
 ```
 <br>
 
-2. Number
+2. __Number__
+
 ```js
 console.log(String("")); // 0
 console.log(String("123")); // 123
@@ -322,7 +322,8 @@ console.log(String(undefined)); // NaN
 ```
 <br>
 
-3. Boolean
+3. __Boolean__
+
 ```js
 console.log(String("")); // false
 console.log(String("123")); // true
