--- a/JavaScript/6. Array.md
+++ b/JavaScript/6. Array.md
@@ -9,7 +9,7 @@
 
 - 배열 내 값을 요소(element)라고 하며, 배열 요소는 index로 접근
 - 대표 속성과 메서드
-  - 배열 크기 및 여부 확인: ```Array.length```, ```Array.isSrray()```
+  - 배열 크기 및 여부 확인: ```Array.length```, ```Array.isArray()```
   - 배열 추가 및 삭제: ```Array.push()```, ```Array.pop()```, ```Array.shift()```, ```Array.unshift()```, ```Array.splice()```, ```Array.slice()``` 등
   - 배열 탐색: ```Array.indexOf()```, ```Array.lastIndexOf()```, ```Array.includes()```
 
@@ -20,13 +20,13 @@
 ## 2) 배열 기본 메서드
 ### ✔ 배열 선언, 접근, 속성
 - 선언: "new Array()" 혹은 "[]"을 통해 선언, 사이즈 혹은 값을 입력해 초기화 가능
-- 접근 방법: "Array[index]"를 통해 index를 통하여 접근
+- 접근 방법: "Array[index]"를 통해 index를 통하여 O(1) 접근
 - 배열 속성: "Array.length"를 통해 배열 요소의 개수 확인 가능 
 
 <br>
 <br>
 
-### 배열의 실체
+### ✔ 배열의 실체
 자바스크립트에서 배열은 다른 언어에서 말하는 일반적인 배열이 아닌 Hash 기반 객체
 
 - 메모리가 연속적인 밀집 배열(dense array)가 아닌 __비 연속적인 희소 배열(sparse array)__
@@ -220,3 +220,50 @@ let result = str_separator.split(";"); // ; 단위로 나눠서 배열에 저장
 console.log(result); // ["apple", "orange", "mango", "grape"];
 ```
   - 배열 값을 문자로 변환: ```Array.join()```
+
+<br>
+<br>
+<br>
+
+## 4) 배열 논리연산
+### ✔ some()
+배열 내 단 하나라도 콜백 함수의 조건을 만족하는 요소가 있으면 true, 아니면 false(빈 배열 false) 반환 (or 느낌)
+
+- Array.some(function(item, index, array){})
+```js
+let user = [
+  { name: "bob", age: 18, job: false },
+  { name: "john", age: 28, job: true },
+  { name: "part", age: 38, job: false },
+]
+
+let some_job = user.some(function (users) {
+  return user.job == false;
+});
+console.log(some_job); // true
+
+let empty = [].some((item) => item > 16);
+console.log(empty); // 빈 배열, false
+```
+<br>
+<br>
+
+### ✔ every()
+배열 내 모든 요소가 콜백 함수의 조건을 만족한다면 true, 아니면 false 반환(빈 배열인 경우 true)
+
+- Array.every(function(item, index, array){})
+```js
+let user = [
+  { name: "bob", age: 18, job: false },
+  { name: "john", age: 28, job: true },
+  { name: "part", age: 38, job: false },
+]
+
+let some_job = user.every(function (users) {
+  return user.job == false;
+});
+console.log(some_job); // false
+
+let empty = [].every((item) => item > 16);
+console.log(empty); // 빈 배열, true
+```
